0.45: (in development)
    * Default Windows fonts is Segoe UI, Trebuchet MS, Tahoma, Verdana
    + New icons for tweet editor
    * Shortened images preview is now fixed

0.44:
    * Nothing changed, just for WebStore to pass

0.43:
    * Fixed switching between images and map tweet info
    * Fixed bug when trying to reply with Meta+Enter on OS X
    * Fixed bug with geoinfo in tweets
    - No more donate button

0.42:
    + Showing inline preview for raw linked images
    + Ability to insert the page title with url on attach button click with modifier key
    + Using metaKey as a modifier in OS X
    * Geolocation getter is now limited for 5 seconds

0.41:
    * Avoid flicker while using backspace in reply
    + Ability to change the space after user nick in reply with some punctuation symbol
    + Ability to view the home timeline directly on twitter.com

0.40:
    * Better links handling with middle mouse key or with Meta key pressed in OS X
    + Support for image preview for services:
        - imgur.com
        - yfrog.com
        - img.ly
        - twitpic.com
        - instagr.am

0.39:
    * Fixed bug with back button on profile page after some action with confirmation (#78)

0.38:
    * Fixed bug when links and media are not recognized in retweets
    * Fixed bug with services icon strange border
    * Even better links recognition
    + New option to create a link to the tweet on twitter.com from time mark

0.36:
    * Fixed bug with disappeared services icons
    * Fixed bug with international hashtags
    * Twitter Text upgrade
    * Fixed bug with two or more maps opened in the same timeline
    + Automatic tweet editor width positioning (special for Chrome 14 with native scrollbars on OS X Lion)
    + Tweet pictures inline preview

0.35:
    * Some style changes (thanks @GrawlCore)
    + We are using Twitter Text (https://github.com/twitter/twitter-text-js) to recognize url, mentions and hashes